[app][s]: set title on 'pages' using sammy.title.js plugin.

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>{{blogName}}</title>
+  <title>Comment On It</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="http://assets.okfn.org/gfx/logo/favicon.ico" type="image/x-icon" />
   <!--
@@ -110,7 +110,8 @@
 <script src="script/vendor/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/_utils/script/jquery.couch.js?0.8.0"></script>
 <script src="script/vendor/sammy/sammy.js" type="text/javascript" charset="utf-8"></script>
-<script src="script/vendor/sammy/plugins/sammy.mustache.js" type="text/javascript" charset="utf-9"></script>
+<script src="script/vendor/sammy/plugins/sammy.mustache.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/vendor/sammy/plugins/sammy.title.js" type="text/javascript" charset="utf-8"></script>
 <script src="script/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
