[text/edit][m]: (partly old) get create/edit of texts (for annotation) working (hurrah!).
  * tests/test-create.html: sort of working selenium test of this new functionality.

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -46,6 +46,7 @@
     <div class="menu">
     <ul>
       <li><a href="#/">Home</a></li>
+      <li><a href="#/text/edit">Add Text to Annotate</a></li>
     </ul>
     </div> <!-- .menu -->
   </div> <!-- #access -->
@@ -112,6 +113,7 @@
 <script src="script/vendor/sammy/sammy.js" type="text/javascript" charset="utf-8"></script>
 <script src="script/vendor/sammy/plugins/sammy.mustache.js" type="text/javascript" charset="utf-8"></script>
 <script src="script/vendor/sammy/plugins/sammy.title.js" type="text/javascript" charset="utf-8"></script>
+<script src="script/vendor/showdown.js" type="text/javascript" charset="utf-8"></script>
 <script src="script/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
