[app.js][s]: create module CommentOnIt in module-pattern style and refactor app to attach sammy app to this module.
  * index.html: move running of sammy app on document ready out of app.js into index.html so that app.js is more reusable (e.g. in tests -- see next commit)

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -115,5 +115,10 @@
 <script src="script/vendor/sammy/plugins/sammy.title.js" type="text/javascript" charset="utf-8"></script>
 <script src="script/vendor/showdown.js" type="text/javascript" charset="utf-8"></script>
 <script src="script/app.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript" charset="utf-8">
+	jQuery(function() {
+		CommentOnIt.app.run('#/');
+	});
+</script>
 </body>
 </html>
